@@ -7,6 +7,8 @@ v0.99.9-RC4:
 *) Sign error for the Hubble term in kinetic energy calculations now fixed (thanks to Alex Ji for finding).  This has almost no effect on halo catalogs because the Hubble term is extremely subdominant on halo scales.
 *) Infinite loop fixed in full particle outputs.  Thanks to Lauren Anderson for finding.
 *) Fixes to find parents - thanks to Lyndsay Old for finding.
+*) Compiles without gcc (thanks to Sean Larkin for finding).
+*) STRICT_SO_MASSES now automatically enables binary outputs because they are required for STRICT_SO_MASSES to work.  (Thanks to Julian Adamek for finding).
 
 v0.99.9-RC3 (5/13/14):
 *) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
